# think-cell-library

./: CMakeLists.txt  README.md  boost_1_57_0_issue10754_any_iterator.hpp.patch  range.example.cpp
.github/workflows/: macos-10.15.yml  main.yml  ubuntu-20.04.yml
boost_patches/: has_range_iterator.patch
range/: CMakeLists.txt  Range.h  accumulator.h  algorithm.h  algorithm.t.cpp  array.h  as_lvalue.h  assign.h  binary_operators.h  bit_cast.h  bitfield.h  bitfield.t.cpp  bool_cast.h  break_or_continue.h  casts.h  compare.h  compat.t.cpp  conditional.h  const.t.cpp  const_forward.h  container.h  container_traits.h  convert.h  counting_range.h  create.t.cpp  dense_map.h  dense_map.t.cpp  empty.h  empty.t.cpp  empty_chain.h  enum.h  equal.h  equal.t.cpp  equality_comparable.h  explicit_cast.h  filter_adaptor.h  flatten_adaptor.h  for_each.h  for_each.t.cpp  for_each_adjacent_tuple.h  (+66 more)
tc/: accessors.h  accumulate.h  accumulator.h  algorithm.h  algorithm.t.cpp  any_accu.h  append.h  append.t.cpp  array.h  as_lvalue.h  ascii.h  assert_defs.h  assign.h  best_element.h  binary_operators.h  bit_cast.h  bitfield.h  bitfield.t.cpp  bool_cast.h  break_or_continue.h  casts.h  char_restrictive.h  char_restrictive.t.cpp  compare.h  compat.t.cpp  concat_adaptor.h  concat_adaptor.t.cpp  conditional.h  conditional.t.cpp  conditional_range.h  const.t.cpp  const_forward.h  construction_restrictiveness.h  cont_assign.h  cont_reserve.h  container.h  container_traits.h  convert_enc.h  counting_range.h  create.t.cpp  (+123 more)
tc/algorithm/: accumulate.h  accumulator.h  algorithm.h  algorithm.t.cpp  any_accu.h  append.h  append.t.cpp  best_element.h  binary_operators.h  break_or_continue.h  compare.h  element.h  element.t.cpp  empty.h  empty.t.cpp  equal.h  equal.t.cpp  filter_inplace.h  find.h  find_closest_if.h  find_closest_if.t.cpp  for_each.h  for_each.t.cpp  for_each_xxx.h  interleave_ranges.h  longest_common_prefix.h  longest_common_prefix.t.cpp  minmax.h  partition_iterator.h  partition_range.h  quantifier.h  quantifier.t.cpp  restrict_size_decrement.h  round.h  round.t.cpp  size.h  size_bounded.h  size_linear.h  sort_streaming.h  sort_streaming.t.cpp
tc/base/: accessors.h  as_lvalue.h  assert_defs.h  assign.h  bit_cast.h  bitfield.h  bitfield.t.cpp  casts.h  casts.t.cpp  chained.h  change.h  conditional.h  conditional.t.cpp  const_forward.h  construction_restrictiveness.h  derivable.h  empty_chain.h  enum.h  enum.t.cpp  explicit_cast.h  explicit_cast_fwd.h  functors.h  fundamental.h  generic_macros.h  has_xxx.h  inplace.h  inside_unwinding.h  integer.h  invoke.h  invoke.t.cpp  invoke_with_constant.h  large_integer.h  modified.h  modified.t.cpp  move.h  noncopyable.h  ref.h  reference_or_value.h  reference_or_value.t.cpp  renew.h  (+24 more)
tc/container/: cont_assign.h  cont_assign.t.cpp  cont_reserve.h  container.h  container_traits.h  insert.h  string.h
tc/range/: adjacent_adaptor.h  adjacent_tuples_adaptor.h  cartesian_product_adaptor.h  concat_adaptor.h  concat_adaptor.t.cpp  conditional_range.h  conditional_range.t.cpp  empty_range.h  filter_adaptor.h  index_iterator.h  index_range.h  intersection_adaptor.h  intersection_adaptor.t.cpp  iota_range.h  iterator_cache.h  iterator_facade.h  join_adaptor.h  join_framed_adaptor.h  literal_range.h  literal_range.t.cpp  make_lazy_range.h  make_range.h  merge_range.h  merge_ranges.h  merge_ranges.t.cpp  meta.h  ordered_pairs.h  partial_sum.h  range.t.cpp  range_adaptor.h  range_fwd.h  range_return.h  repeat_n.h  reverse_adaptor.h  reverse_adaptor.t.cpp  sparse_adaptor.h  sparse_adaptor.t.cpp  subrange.h  subrange.t.cpp  take_while.h  (+8 more)
tc/string/: ascii.h  char.h  char.t.cpp  convert_enc.h  convert_enc.t.cpp  format.h  jsonparser.h  jsonparser.t.cpp  make_c_str.h  make_c_str.t.cpp  named.h  parserbase.h  spirit.h  spirit_algorithm.h  value_restrictive.h  value_restrictive.t.cpp  xmlparser.h  xmlparser.t.cpp  xmltransform.h
tc/string/spirit/: x3.hpp
tc/string/spirit/support/: assert_msg.hpp
tc/string/spirit/support/char_encoding/: ascii.hpp  iso8859_1.hpp  standard.hpp  standard_wide.hpp  unicode.hpp
tc/string/spirit/support/char_set/: basic_chset.hpp  range.hpp  range_functions.hpp  range_run.hpp  range_run_impl.hpp
tc/string/spirit/unittest/: actions.t.cpp  alternative.t.cpp  and_predicate.t.cpp  attr.t.cpp  attribute_type_check.t.cpp  binary.t.cpp  bool.hpp  bool.t.cpp  char1.t.cpp  char_class.t.cpp  confix.t.cpp  container_support.t.cpp  difference.t.cpp  eoi.t.cpp  eol.t.cpp  eps.t.cpp  error_handler.t.cpp  expect.t.cpp  extract_int.t.cpp  fusion_map.t.cpp  grammar.hpp  grammar.t.cpp  grammar_linker.t.cpp  int.hpp  int1.t.cpp  iterator_check.t.cpp  kleene.t.cpp  lexeme.t.cpp  list.t.cpp  lit.t.cpp  lit1.t.cpp  lit2.t.cpp  matches.t.cpp  no_case.t.cpp  no_skip.t.cpp  not_predicate.t.cpp  omit.t.cpp  optional_x3.t.cpp  plus.t.cpp  raw.t.cpp  (+30 more)
tc/string/spirit/x3/: auxiliary.hpp  binary.hpp  char.hpp  core.hpp  directive.hpp  nonterminal.hpp  numeric.hpp  operator.hpp  string.hpp
tc/string/spirit/x3/auxiliary/: attr.hpp  eoi.hpp  eol.hpp  eps.hpp  guard.hpp
tc/string/spirit/x3/binary/: binary.hpp
tc/string/spirit/x3/char/: any_char.hpp  char.hpp  char_class.hpp  char_class_tags.hpp  char_parser.hpp  char_set.hpp  literal_char.hpp  negated_char_parser.hpp  unicode.hpp
tc/string/spirit/x3/core/: action.hpp  call.hpp  parse.hpp  parser.hpp  proxy.hpp  skip_over.hpp
tc/string/spirit/x3/directive/: confix.hpp  expect.hpp  lexeme.hpp  matches.hpp  no_case.hpp  no_skip.hpp  omit.hpp  raw.hpp  repeat.hpp  seek.hpp  skip.hpp  with.hpp
tc/string/spirit/x3/nonterminal/: debug_handler_state.hpp  rule.hpp  simple_trace.hpp
tc/string/spirit/x3/numeric/: bool.hpp  bool_policies.hpp  int.hpp  real.hpp  real_policies.hpp  uint.hpp
tc/string/spirit/x3/operator/: alternative.hpp  and_predicate.hpp  difference.hpp  kleene.hpp  list.hpp  not_predicate.hpp  optional.hpp  plus.hpp  sequence.hpp
tc/string/spirit/x3/string/: literal_string.hpp  symbols.hpp  tst.hpp  tst_map.hpp
tc/string/spirit/x3/support/: context.hpp  no_case.hpp  subcontext.hpp  unused.hpp
(+46 files in other folders)
